# compiler-project

./: .gitlab-ci.yml  .gitmodules  CMakeLists.txt  example.xc  grammar-new.txt  grammar.txt  test.asm  test.xc
asm/: _start.asm  globals.asm  lib.asm  start.asm  syscall.asm
asm/lib/: memory.asm
lib/std/: print.xc
src/: AST.h  ASTParser.cpp  ASTParser.h  Common.h  main.cpp
std/: print.xc
